--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="next">Next</string>
     <string name="about">About Me</string>
     <string name="clicky">Clicky Clicky</string>
+    <string name="link_collector">Link Collector</string>
     <string name="previous">Previous</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
